Resolves: tdf#104141 CAIRO_FORMAT_A1 vs N1BitLsbPal

where vcl transparency is the opposite of cairo's so we've been switching the
source color to the opposite for drawing on CAIRO_FORMAT_A1 and then sucking
out the bits "as-is" to give the right results.

Now instead use the right source color and toggle CAIRO_FORMAT_A1 bitmaps to
N1BitLsbPal in getBitmap.

Then additionally toggle all N1BitLsbPal bitmaps input to drawBitmap to
CAIRO_FORMAT_A1 when making a cairo surface from them.

Change-Id: I45c6d4f3894c6a22a07a3bd65950cd8070e8eaff
Reviewed-on: https://gerrit.libreoffice.org/40453
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit d148340babf6c973f7d463909d7a51e16c953248)

Resolves: tdf#111483 1 bit bitmaps with non-standard black/white indexes

can be left "untoggled" when converted to cairo A1

Reviewed-on: https://gerrit.libreoffice.org/41895
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 3cb59bff332b02f607d15b5ed41b4438e8102980)

Change-Id: I18f3e2109cd4b57bce584545090e26c931de1200

Resolves: tdf#111073 incorrect gif background color

a) set correct palette entries for the 1bit bitmap returned
b) only use a BITMASK for the mask (like its AnimatedGraphicPrimitive2D
brother in drawinglayer does)

Change-Id: I704997de554dc4d0e523458d45ab329815b5046a

Resolves: rhbz#1467512 mask not created as 1 bit depth

Change-Id: Ib5bdd594efd41eb881dfc4e2454b72e4739ffd56
Reviewed-on: https://gerrit.libreoffice.org/39693
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit bea1dc5f8d17c1011cdfab1ff540f3e4b3a4d1bb)
Reviewed-on: https://gerrit.libreoffice.org/41924
Reviewed-by: Michael Stahl <mstahl@redhat.com>